--- a/src/views/users.ejs
+++ b/src/views/users.ejs
@@ -17,6 +17,15 @@
 
             </div>
 
+            <div class="card-body mt-4">
+                <legend>Update</legend>
+                <form action="/updateThumbs" method="post" enctype="multipart/form-data">
+                    <input type="file" name="jsonfile" class="form-control" required>
+                    <input type="submit" name="" value="Update thumbs" class="btn btn-info"/>
+                </form>
+
+            </div>
+
             <legend class="mt-4">Filtros</legend>
 
             <div class="form-group">
