--- a/src/views/table.ejs
+++ b/src/views/table.ejs
@@ -5,9 +5,9 @@
         <td>photo</td>
         <td>name</td>
         <td>biography</td>
-        <td>numeros</td>
-        <td>privacidad</td>
-        <td>Actions</td>
+        <td style="min-width: 120px">numeros</td>
+        <td style="min-width: 110px">privacidad</td>
+        <td style="min-width: 238px">Actions</td>
     </tr>
     </thead>
     <tbody>
@@ -19,7 +19,7 @@
                 <td><a href="https://www.instagram.com/<%= data[i].username %>"><%= data[i].username %></a> <br> <%= data[i].full_name %></td>
                 <td style="white-space: pre-wrap"><%- data[i].biography %> <br> <a href="<%= data[i].external_url %>"><%= data[i].external_url %></a></td>
                 <td><%= data[i].post_count %> posts <br> <%= data[i].followed_by %> seguidores <br> <%= data[i].follow %> seguidos <br> <%= data[i].mutual_followed_by %> mutuos</td>
-                <td style="max-width: 110px"><% if(!data[i].is_private && home){ %>
+                <td><% if(!data[i].is_private && home){ %>
                         Público <br>
                         <form action="" method="get">
                             <input type="hidden" name="view" value="<%= data[i].id %>">
