fix for current api

--- a/src/views/users.ejs
+++ b/src/views/users.ejs
@@ -10,7 +10,7 @@
             <div class="card-body mt-4">
                 <legend>Cargar datos</legend>
                 <form action="/load" method="post" enctype="multipart/form-data">
-                    <input type="text" placeholder="Group name" name="referente" class="form-control">
+                    <input type="text" placeholder="Group name(todo)" name="referente" class="form-control">
                     <input type="file" name="jsonfile" class="form-control" required>
                     <input type="submit" name="" value="Load JSON" class="btn btn-info"/>
                 </form>
@@ -26,7 +26,7 @@
 
             </div>
 
-            <legend class="mt-4">Filtros</legend>
+            <legend class="mt-4">Filtros (todo)</legend>
 
             <div class="form-group">
                 <select class="form-select" id="exampleSelect1">
